@@ -945,6 +945,20 @@ verilog/parser_sv.v:380: VAR  'typedef' 'types_t' 'class' '' 'TYPE' '[$]' ''
 verilog/parser_sv.v:381: FUNCTION  'function' 'f' 'types_t'
 verilog/parser_sv.v:384: ENDTASKFUNC  'endfunction'
 verilog/parser_sv.v:385: ENDCLASS  'endclass'
+verilog/parser_sv.v:387: INTERFACE  'interface' 'if_bug777'
+verilog/parser_sv.v:388: VAR  'net' 'a' 'interface' 'wire' '' '' ''
+verilog/parser_sv.v:389: MODPORT  'modport' 'master'
+verilog/parser_sv.v:389: VAR  'port' 'a' 'modport' '' '' '' 'a'
+verilog/parser_sv.v:389: PORT  'a' 'modport' 'input' '' '' '1'
+verilog/parser_sv.v:389: ENDMODPORT  'endmodport'
+verilog/parser_sv.v:390: MODPORT  'modport' 'slave'
+verilog/parser_sv.v:390: VAR  'port' 'a' 'modport' '' '' '' 'a'
+verilog/parser_sv.v:390: PORT  'a' 'modport' 'output' '' '' '1'
+verilog/parser_sv.v:390: ENDMODPORT  'endmodport'
+verilog/parser_sv.v:391: ENDINTERFACE  'endinterface'
+verilog/parser_sv.v:392: MODULE  'module' 'bug778' undef '0'
+verilog/parser_sv.v:393: VAR  'var' 'bar' 'module' '' 'virtual if_bug777' '' ''
+verilog/parser_sv.v:394: ENDMODULE  'endmodule'
 verilog/parser_sv09.v:001: COMMENT  '// 1800-2009 mantis1769'
 verilog/parser_sv09.v:002: MODULE  'module' 'mantis1769' undef '0'
 verilog/parser_sv09.v:002: VAR  'parameter' 'N' 'module' '' '' '' '1'
